# Blue-Sky-Fake-News-Detector

./: .env.exemple  .gitignore  Analyseur_de_Tweet.py  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  push_test.txt  pyproject.toml  requirements.txt  server.py  test.ipynb
pages/: Détecteur_de_FakeNews.py
